syntax = "proto3";
package ccmose;
option go_package = "/ccmose/gen/go;trippb";

message GetTripRequest{
  int64 id = 1;
}

message GetTripResponse{
  string statusCode = 1;
}

service TripService{
  rpc GetTrip(GetTripRequest) returns (GetTripResponse){}
}





